# IT_polygon

./: .gitignore  Dockerfile  README.md  bd.py  flake.nix  pyproject.toml  reflex.db  requirements.txt  result  rxconfig.py
.web/: bun.lockb  package-lock.json  package.json  reflex.install_frontend_packages.cached  reflex.json
.web/pages/: _app.js  about.js  articles.js  contact.js  index.js  lessons.js  login.js  logout.js  pricing.js  profile.js  protected.js  register.js
.web/utils/: context.js
alembic/versions/: 00d09a47e8f6_.py  36f5125bc0cb_.py  3c1f0418ce47_.py  7255df0a5b6a_.py
assets/: style.css
crate/: __init__.py  crate.py
main_cite/: app.py
main_cite/static/: style.css
main_cite/templates/: course_detail.html  courses.html  index.html  user.html
prdprf/: models.py  prdprf.py  Тесты.py
prdprf/articles/: detail.py  list.py  state.py
prdprf/auth/: forms.py  google_auth.py  pages.py  protected.py  react_oauth_google.py  result  state.py
prdprf/comments/: form.py
prdprf/contact/: __init__.py  form.py  page.py  state.py
prdprf/dashboard/: __init__.py  page.py
prdprf/lessons/: __init__.py  _editor.py  add.py  detail.py  doc_viewer.py  edit.py  forms.py  list.py  notfound.py  quill.py  state.py
prdprf/navigation/: __init__.py  routes.py  state.py
prdprf/pages/: __init__.py  about.py  dashboard.py  landing.py  pricing.py  profile.py  protected.py  stats.py
prdprf/stats/: page.py  state.py
prdprf/tasks_new/: page.py  state.py
prdprf/tests/: quest_state.py  (+7 more)
pythonProject12/: README.md  form.py  pythonProject12.py
tests/: crate.py
(+12 files in other folders)
